--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       <main>
 
         <header>
-          <h1>Title</h1>
-          <h2>Sub Title</h2>
+          <h1>IT Specialist in JavaScript</h1>
+          <h2>ecollege</h2>
         </header>
 
         <article>
