update template_first_page and template_second_page.html to reflect changes to these files in templatetgd (parent project)

--- a/html/template_first_page.html
+++ b/html/template_first_page.html
@@ -181,7 +181,7 @@ clang helloworld.c -o helloworld.o
         nextPage.setAttribute("href", nextPageURL(baseFileName, pageArr));
 
         // previous page
-        prevPage.setAttribute("href", prevPageURL(baseFileName, pageArr, "./"));
+        prevPage.setAttribute("href", prevPageURL(baseFileName, pageArr, "../"));
         // prevPage.setAttribute("href", prevPageURL(baseFileName, pageArr));[template-second-page-CHANGE]
 
         // aside-right event listeners
@@ -202,7 +202,7 @@ clang helloworld.c -o helloworld.o
 
         // aside-left event listeners
         document.getElementsByClassName("aside-left")[0].addEventListener('click', function () {
-            window.location.href = prevPageURL(baseFileName, pageArr, "./");
+            window.location.href = prevPageURL(baseFileName, pageArr, "../");
             // window.location.href = prevPageURL(baseFileName, pageArr, "./");[Template-seond-page-CHANGE]
             setBackgroundColor(this.className, "lightblue", 0);
         });
