--- a/html/questions_template.html
+++ b/html/questions_template.html
@@ -57,7 +57,7 @@
 
             <main>
                 <article>
-                    <h1 class="count">Introduction</h1>
+                    <h1>Introduction</h1>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
                         repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
@@ -65,23 +65,12 @@
                 </article>
 
                 <article>
-                    <h1 class="count">Code Example</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
-                        iusto
-                        totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
-                    </p>
-
+                    <h1 class="count">Question</h1>
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-
-#include &lt;stdio.h&gt;
-        
-int main()
-  {
-    printf("Hello world\n");
-  }</pre><!-- code-content -->
+INSERT CODE
+</pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -89,33 +78,213 @@ int main()
                     <details open><!--Details CONSOLE -->
                         <summary class="details-console-summary">[JavaScript Inserts]</summary>
                         <pre class="details-console-aclass small-view">
-
-clang helloworld.c -o 
-    zhelloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- small-view -->
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
 
-clang helloworld.c -o helloworld.o
 
-./helloworld.o
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
 
-// Hello world
-                            </pre><!-- wide-view -->
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
                 </article>
 
                 <article>
-                    <h1 class="count">Notes</h1>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
 
-                    <ol>
-                        <li>I am an item</li>
-                    </ol>
-
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
                 </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Question</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE
+</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+                </article>
+                <!--here1-->
 
                 <article>
                     <h1 class="count refs-heading">References</h1>
@@ -164,7 +333,6 @@ clang helloworld.c -o helloworld.o
     <script src="../js/constants_variables.js"></script><!-- JS Constants_variables -->
 
     <script>
-        'use strict'
 
         // page title
         document.title = getPageTitle(pageTitleArr, pageArr, baseFileName);
@@ -223,9 +391,9 @@ clang helloworld.c -o helloworld.o
         let conditionTwo = window.matchMedia("(min-width: 440px)");
         let targets = document.getElementsByTagName("details");
 
-        // let arr = Array.from(Array(3).keys());
-        // let oddsArr = arr.filter(el => el % 2 !== 0);
-        // let evensArr = arr.filter(el => el % 2 == 0);
+        let arr = Array.from(Array(20).keys());
+        let oddsArr = arr.filter(el => el % 2 !== 0);
+        let evensArr = arr.filter(el => el % 2 == 0);
 
         window.addEventListener("load",
             function () {
@@ -233,51 +401,51 @@ clang helloworld.c -o helloworld.o
                 // Use condition to REMOVE open attribute from 
                 // media with widths LESS THAN max-width (440px) (mobile)
 
-                for (const el of [0, 1, 2]) {
-                    // or: for (const el of arr) {
+                for (const el of arr) {
                     condRemoveAttribute(condition, "details", el, "open");
+                    //[0,1,2,3, ...]
                 }
 
                 // Use conditionTwo to REMOVE open attribute from 
                 // media with widths GREATER THAN min-width (440px)
 
-                for (const el of [1]) {
-                    // or: for (const el of oddsArr)
+                for (const el of oddsArr) {
                     condRemoveAttribute(conditionTwo, "details", el, "open");
+                    //[1,3,5, ...]
                 }
 
                 // toggle innerHTML
-                for (const el of [0]) {
-                    // or: for (const el of evensArr)
+                for (const el of evensArr) {
                     toggleFirstChildInnerHTML(targets[el], "open", "", "Code");
+                    //[0,2,4,6, ...]
                 }
 
-                for (const el of [1]) {
-                    // or: for (const el of oddsArr)
+                for (const el of oddsArr) {
                     toggleFirstChildInnerHTML(targets[el], "open", "", "Console");
+                    //[1,3,5, ...]
                 }
 
-                toggleFirstChildInnerHTML(targets[2], "open", "", "Bibliography");
+                toggleFirstChildInnerHTML(targets[20], "open", "", "Bibliography");
 
                 // Toggle classes
-                for (const el of [0]) {
-                    // or: for (const of evensArr)
+                for (const el of evensArr) {
                     toggleClass(targets[el], "open", "details-code-aclass", "details-code-bclass");
+                    //[0,2,4, ...]
                 }
 
-                for (const el of [1]) {
-                    // or: for (const el of oddsArr)
+                for (const el of oddsArr) {
                     toggleClass(targets[el], "open", "details-console-aclass", "details-console-bclass");
+                    //[1,3,5, ...]
                 }
 
-                toggleClass(targets[2], "open", "details-refs-aclass", "details-refs-bclass");
+                toggleClass(targets[20], "open", "details-refs-aclass", "details-refs-bclass");
             }
         );
 
         // Event Listeners on Details tags 
         // 1) CODE
-        for (const el of [0]) {
-            // or: for (const el of evensArr)
+        for (const el of evensArr) {
+            //[0,1,3, ...]
             targets[el].addEventListener("toggle",
                 function () {
                     toggleFirstChildInnerHTML(this, "open", "", "Code");
@@ -287,8 +455,7 @@ clang helloworld.c -o helloworld.o
         }
 
         // 2) CONSOLE
-        for (const el of [1]) {
-            // or: for (const el of oddsArr)
+        for (const el of oddsArr) {
             targets[el].addEventListener("toggle",
                 function () {
                     toggleFirstChildInnerHTML(this, "open", "", "Console");
@@ -298,7 +465,7 @@ clang helloworld.c -o helloworld.o
         }
 
         // 3) BIBLIOGRAPHY
-        targets[2].addEventListener("toggle",
+        targets[20].addEventListener("toggle",
             function () {
                 toggleFirstChildInnerHTML(this, "open", "", "Bibliography");
                 toggleClass(this, "open", "details-refs-aclass", "details-refs-bclass");
