--- a/html/questions_template.html
+++ b/html/questions_template.html
@@ -106,6 +106,11 @@ INSERT CONSOLE OUTPUT (small view)
                         <pre class="details-console-aclass wide-view">
 INSERT CONSOLE OUTPUT (wide view) 
 </pre><!-- wide-view -->
+                    <!--ususally inserted before details-console end tag-->
+                    <dl class="details-dl">
+                        <dt>Note</dt>
+                        <dd>INSERT TEXT</dd>
+                    </dl>
                     </details><!--details CONSOLE -->
                 </article>
 
@@ -391,9 +396,10 @@ INSERT CONSOLE OUTPUT (wide view)
         let conditionTwo = window.matchMedia("(min-width: 440px)");
         let targets = document.getElementsByTagName("details");
 
-        let arr = Array.from(Array(20).keys());
+        let arr = Array.from(Array(targets.length).keys());
         let oddsArr = arr.filter(el => el % 2 !== 0);
         let evensArr = arr.filter(el => el % 2 == 0);
+        const biblioIndex = targets.length - 1;
 
         window.addEventListener("load",
             function () {
@@ -425,7 +431,7 @@ INSERT CONSOLE OUTPUT (wide view)
                     //[1,3,5, ...]
                 }
 
-                toggleFirstChildInnerHTML(targets[20], "open", "", "Bibliography");
+                toggleFirstChildInnerHTML(targets[biblioIndex], "open", "", "Bibliography");
 
                 // Toggle classes
                 for (const el of evensArr) {
@@ -438,7 +444,7 @@ INSERT CONSOLE OUTPUT (wide view)
                     //[1,3,5, ...]
                 }
 
-                toggleClass(targets[20], "open", "details-refs-aclass", "details-refs-bclass");
+                toggleClass(targets[biblioIndex], "open", "details-refs-aclass", "details-refs-bclass");
             }
         );
 
@@ -465,7 +471,7 @@ INSERT CONSOLE OUTPUT (wide view)
         }
 
         // 3) BIBLIOGRAPHY
-        targets[20].addEventListener("toggle",
+        targets[biblioIndex].addEventListener("toggle",
             function () {
                 toggleFirstChildInnerHTML(this, "open", "", "Bibliography");
                 toggleClass(this, "open", "details-refs-aclass", "details-refs-bclass");
